--- a/package.json
+++ b/package.json
@@ -2,8 +2,14 @@
   "name": "project-y",
   "version": "1.0.0",
   "description": "MERN stack project with shopping app functionality",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "client-install": "npm install --prefix client",
+    "start": "set PORT=4000 && node server.js",
+    "server": "set PORT=4000 && nodemon server.js --ignore client",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,5 +25,29 @@
   "bugs": {
     "url": "https://github.com/samsoedien/project-Y/issues"
   },
-  "homepage": "https://github.com/samsoedien/project-Y#readme"
+  "homepage": "https://github.com/samsoedien/project-Y#readme",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "concurrently": "^4.1.0",
+    "dotenv": "^8.0.0",
+    "ejs": "^2.6.1",
+    "express": "^4.17.0",
+    "helmet": "^3.18.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.2.4",
+    "mongoose": "^5.5.9",
+    "morgan": "^1.9.1",
+    "multer": "^1.4.1",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "uuid": "^3.3.2",
+    "validator": "^10.11.0"
+  },
+  "devDependencies": {
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.17.2",
+    "jest": "^24.8.0",
+    "nodemon": "^1.19.0"
+  }
 }
