--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
   "homepage": "https://github.com/samsoedien/project-Y#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
     "concurrently": "^4.1.0",
+    "csurf": "^1.10.0",
     "dotenv": "^8.0.0",
     "ejs": "^2.6.1",
     "express": "^4.17.0",
