--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
-    "concurrently": "^4.1.0",
+    "config": "^3.1.0",
     "csurf": "^1.10.0",
     "dotenv": "^8.0.0",
     "ejs": "^2.6.1",
     "express": "^4.17.0",
+    "express-validator": "^5.3.1",
+    "gravatar": "^1.8.0",
     "helmet": "^3.18.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.2.4",
@@ -43,14 +45,15 @@
     "multer": "^1.4.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "request": "^2.88.0",
     "uuid": "^3.3.2",
     "validator": "^10.11.0"
   },
   "devDependencies": {
+    "concurrently": "^4.1.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.17.2",
-    "jest": "^24.8.0",
     "nodemon": "^1.19.0"
   }
 }
