config prettier and husky

--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -1,5 +1,6 @@
-module.exports = {
-  "extends": "airbnb-base",
+{
+  "extends": "airbnb",
+  "parser": "babel-eslint",
   "env": {
     "browser": true,
     "node": true,
@@ -8,6 +9,7 @@ module.exports = {
     "mongo": true,
     "es6": true
   },
+  "plugins": ["react", "jsx-a11y", "import"],
   "rules": {
     "comma-dangle": "warn",
     "no-console": "off",
@@ -15,11 +17,12 @@ module.exports = {
       "warn",
       {
         "vars": "local",
-        "args": "none"
+        "args": "none",
       }
     ],
     "linebreak-style": 0,
     "arrow-parens": [2, "as-needed"],
-    "no-param-reassign": 0,
+    "no-underscore-dangle": "off",
+    "no-shadow": "off"
   }
-};
+}
