--- a/client/package.json
+++ b/client/package.json
@@ -29,7 +29,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "format": "prettier"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -48,6 +47,7 @@
   },
   "devDependencies": {
     "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^4.3.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.0",
