--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.17.2",
     "husky": "^2.3.0",
-    "nodemon": "^1.19.0"
+    "nodemon": "^1.19.0",
+    "prettier": "^1.17.1"
   }
 }
