--- a/server/package.json
+++ b/server/package.json
@@ -48,6 +48,7 @@
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "request": "^2.88.0",
+    "stripe": "^7.1.0",
     "uuid": "^3.3.2",
     "validator": "^10.11.0"
   },
