--- a/client/package.json
+++ b/client/package.json
@@ -6,8 +6,8 @@
     "@material-ui/core": "^4.0.0-rc.0",
     "@material-ui/icons": "^4.0.0-rc.0",
     "axios": "^0.19.0",
-    "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
+    "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-anchor-link-smooth-scroll": "^1.0.12",
